# stats-cards

./: .example.env  Cargo.toml  Dockerfile  LICENSE.md  README.md  THEMES.md  changelog.md  docker-compose.yml
assets/scripts/: index.js
assets/styles/: index.css  toast.css
data/: README.md  gen.js  hf_gen_pipeline_tag.js  lang2hex.json
src/: main.rs  prepared_templates.rs  templates.rs
src/api/: github.rs  huggingface.rs  mod.rs  wakatime.rs
src/data/: config.rs  language.rs  mod.rs  theme.rs
src/routes/: activity.rs  health.rs  index.rs  languages.rs  mod.rs  pin.rs
src/utils/: mod.rs  svg.rs  utils.rs
templates/: error.html  index.html
templates/compact/: activity.html  languages.html
templates/compact/pin/: github.html  huggingface.html
templates/components/: footer.html  header.html
