[package]
name = "stats-cards"
version = "0.2.3"
edition = "2024"

[dependencies]
axum = { version = "0.8.4" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
askama = "0.14.0"
lazy_static = "1.5.0"
reqwest = { version = "0.12.20", features = ["json"] }
moka = { version = "0.12.10", features = ["future"] }
toml = "0.8.23"
dotenv = "0.15.0"
chrono = "0.4.41"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.4", features = ["fs", "trace"] }
fontdue = "0.9.3"
human_format = "1.1.0"
itertools = "0.14.0"
